<resources>
    <string name="app_name">U Health</string>
    <string name="correo">Correo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="HelperText">Requerido</string>
    <string name="btnIniciarSesion">Iniciar Sesión</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="ConfirmarContraseña">Confirmar Contraseña</string>
    <string name="btnCrearCuenta">Crear Cuenta\n</string>
    <string name="Google">Iniciar Sesión con Google</string>


    <string name="facebook_app_id">230037006451601</string>
    <string name="fb_login_protocol_scheme">fb230037006451601</string>
    <string name="facebook_client_token">32bb726dc58fbe052ebc8b9ba9e59ba1</string>

    <string name="preps_file">com.example.u_health.PREFERENCE_FILE_KEY</string>
    <string name="Lema">Tu Salud en tus manos</string>
    <string name="ContentDescription">Logo App</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="fecha_nacimiento">Fecha Nacimiento</string>
    <string name="genero">Genero</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="enfermedad">Enfermedad</string>
    <string name="guardar">Guardar Perfil</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="tipo_enfermedad">Tipo de Enfermedad</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_recordatorios">Tratamiento</string>
    <string name="title_informacion">Informacion</string>
    <string name="title_mapa">Mapa</string>
    <string name="strRecordatorio">Recordatorio</string>
    <string name="title_usuario">Usuario</string>
    <string name="nuevamente">nuevamente,</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="edad">Edad</string>
    <string name="peso_ideal">Peso ideal</string>
    <string name="title_citas">Citas</string>
    <string name="eliminar">Eliminar</string>
    <string name="_20_00">20:00</string>
    <string name="especialidad">Titulo</string>
    <string name="doctor">Doctor</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="fecha">Fecha</string>
    <string name="Guardar">Guardar</string>
    <string name="detalle">Detalles</string>

    <string name="Informacion_Detalle">Detalles de la Informacion</string>
    <string name="Peso_Actual">Su Peso actual es</string>
    <string name="consejos_para_bajar_de_peso">Consejos para Bajar de Peso</string>
    <string name="consejos_para_subir_de_peso">Consejos para Subir de Peso</string>
    <string name="consejos_bajar">1. Reduce las horas entre las comidas\n2. Come de forma consciente y más lentamente\n3. Controla las cantidades de comida\n4. Presta atención a los condimentos\n5. Haz una cena ligera\n6. Bebe mucha agua\n7. Evita el sedentarismo\n8. Prescinde de los dulces</string>
    <string name="peso_">130 lbs</string>
    <string name="Necesita_perder">Necesita perder</string>
    <string name="Necesita_ganar">Necesita ganar</string>
    <string name="consejos_subir">1. Come con más frecuencia.\n2. Elige alimentos con muchos nutrientes\n3. Agrega aderezos.\n4. Prueba licuados y batidos de frutas.\n5. Controla qué bebes y cuándo.\n6. Bebe mucha agua\n7. Haz ejercicio.</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="actualizar_perfil">Actualizar Perfil</string>
    <string name="Configuracion">Configuración</string>
    <string name="Cita">Agregar Citas</string>
    <string name="Peso_Detalle">Detalles sobre su Peso</string>
    <string name="Imc">Indice de Masa corporal</string>
    <string name="Grasa">% Grasa Corporal</string>
    <string name="clasificacion_imc">Clasificacion Indice de Masa Corporal</string>
    <string name="imc_pesodemasiadobajo">Desnutricion</string>
    <string name="imc_pesomuybajo">Delgadez Severa</string>
    <string name="imc_pesobajo">Peso Bajo</string>
    <string name="imc_pesonormal">Peso Normal</string>
    <string name="imc_sobrepeso">Sobrepeso</string>
    <string name="imc_obesidad1">Obsesidad I</string>
    <string name="imc_obesidad2">Obesidad II</string>
    <string name="imc_obesidad3">Obesidad III</string>
    <string name="estado">Se encuentra en</string>
    <string name="_16"><![CDATA[< 16]]></string>
    <string name="Medicamento">Nombre del Medicamento</string>
    <string name="Tipo_Med">Tipo de Medicamento</string>
    <string name="Frecuencia">Frecuencia</string>
    <string name="Cantidad">Cantidad de Medicamentos</string>
    <string name="tratamiento">Agregar Tratamiento</string>
    <string name="strDialogTitulo">¿Está seguro de eliminar este Recordatorio?</string>
    <string name="strDialogTitulos">¿Está seguro de eliminar esta Cita?</string>
    <string name="strAceptar">Aceptar</string>
    <string name="strCancelar">Cancelar</string>
    <string name="actualizar">Actualizar</string>

    <string-array name="FrecuenciaList">
        <item>Cada 6 Horas</item>
        <item>Cada 8 Horas</item>
        <item>Cada 12 Horas</item>
        <item>Diario</item>
    </string-array>

    <string-array name="TipoList">
        <item>Capsula</item>
        <item>Jarabe</item>
        <item>Gotas</item>
        <item>Inyección</item>
        <item>Supositorio</item>
    </string-array>

</resources>