<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".View.Login">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogin"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="64dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_uhealth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtImgLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/courgette"
        android:text="@string/app_name"
        android:textColor="@color/texto"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/imgLogin"
        app:layout_constraintStart_toStartOf="@id/imgLogin"
        app:layout_constraintTop_toTopOf="@id/imgLogin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FondotxtCorreo"
        android:layout_width="@dimen/anchoCajaTexto"
        android:layout_height="@dimen/altoCajaTexto"
        android:layout_marginTop="@dimen/margen6"
        android:textColorHint="@color/textologin"
        app:boxStrokeColor="@color/Blue"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:counterTextColor="@color/Blue"
        app:helperText="@string/HelperText"
        app:helperTextTextColor="@color/textologin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogin">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCorreo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alto1"
            android:autoLink="email"
            android:drawableStart="@drawable/ic_correo"
            android:drawablePadding="8dp"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textColor="@color/textologin"
            android:textColorHighlight="@color/textologin"
            android:textColorHint="@color/textologin"
            android:textColorLink="@color/textologin" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FondotxtContraseña"
        android:layout_width="@dimen/anchoCajaTexto"
        android:layout_height="@dimen/altoCajaTexto"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/textologin"
        app:boxStrokeColor="@color/Blue"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:counterTextColor="@color/Blue"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/Blue"
        app:helperText="@string/HelperText"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/textologin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FondotxtCorreo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtContraseña"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:autoLink="email"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:hint="@string/Contraseña"
            android:inputType="textPassword"
            android:textColor="@color/textologin"
            android:textColorHighlight="@color/textologin"
            android:textColorHint="@color/textologin"
            android:textColorLink="@color/textologin" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/Blue"
        android:hint="@string/btnIniciarSesion"
        android:textColorHint="@color/textologin"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FondotxtContraseña" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/Blue"
        android:hint="@string/btnRegistrarse"
        android:textColorHint="@color/textologin"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/fondo"
        android:drawableLeft="@drawable/google_ic"
        android:hint="@string/Google"
        android:textColorHint="@color/textologin"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />




</androidx.constraintlayout.widget.ConstraintLayout>