<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCD6D9"
    tools:context=".View.fragmentos.imc">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abImc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbImc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Blue"
            app:titleTextColor="@color/textologin" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvIMCDet"
        android:layout_width="190dp"
        android:layout_height="180dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/GrisClarito"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/cvTablaImc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abImc"
        app:layout_constraintEnd_toStartOf="@id/cvGrasaCorporal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="10dp"
            android:text="@string/Imc"
            android:textAppearance="@style/Titulos"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="50dp"
            android:src="@drawable/imc" />

        <TextView
            android:id="@+id/txtIMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="25dp"
            android:text="20"
            android:textAppearance="@style/Titulos"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/txtImcEstado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="5dp"
            android:text="@string/imc_pesonormal"
            android:textAppearance="@style/Titulos"
            android:textSize="17sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvGrasaCorporal"
        android:layout_width="190dp"
        android:layout_height="180dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/GrisClarito"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@id/cvTablaImc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cvIMCDet"
        app:layout_constraintTop_toBottomOf="@+id/abImc">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="10dp"
            android:text="@string/Grasa"
            android:textAppearance="@style/Titulos"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_fat"
            app:tint="@color/Cyan" />

        <TextView
            android:id="@+id/txtFat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="15dp"
            android:text="26.8%"
            android:textAppearance="@style/Titulos"
            android:textSize="17sp" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTablaImc"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/GrisClarito"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvGrasaCorporal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="10dp"
            android:text="@string/clasificacion_imc"
            android:textAppearance="@style/Titulos" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:background="#EFEFEF"
            android:paddingStart="15dp"
            android:text="@string/imc_pesodemasiadobajo"
            android:textAppearance="@style/Texto"
            android:textColor="#FF0000" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="120dp"
            android:layout_marginTop="50dp"
            android:text="@string/_16"
            android:textAppearance="@style/Texto"
            android:textColor="#FF0000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="20dp"
            android:background="#EFEFEF"
            android:paddingStart="15dp"
            android:text="@string/imc_pesomuybajo"
            android:textAppearance="@style/Texto"
            android:textColor="#ff8000" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="120dp"
            android:layout_marginTop="75dp"
            android:text="16 - 17"
            android:textAppearance="@style/Texto"
            android:textColor="#ff8000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="20dp"
            android:background="#EFEFEF"
            android:paddingStart="15dp"
            android:text="@string/imc_pesobajo"
            android:textAppearance="@style/Texto"
            android:textColor="#F9A825" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="120dp"
            android:layout_marginTop="100dp"
            android:text="17 - 18.5"
            android:textAppearance="@style/Texto"
            android:textColor="#F9A825" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="125dp"
            android:layout_marginEnd="20dp"
            android:background="#EFEFEF"
            android:paddingStart="15dp"
            android:text="@string/imc_pesonormal"
            android:textAppearance="@style/Texto"
            android:textColor="#008000" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="120dp"
            android:layout_marginTop="125dp"
            android:text="18.5 - 25"
            android:textAppearance="@style/Texto"
            android:textColor="#008000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="20dp"
            android:background="#EFEFEF"
            android:paddingStart="15dp"
            android:text="@string/imc_sobrepeso"
            android:textAppearance="@style/Texto"
            android:textColor="#F9A825" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="120dp"
            android:layout_marginTop="150dp"
            android:text="25 - 30"
            android:textAppearance="@style/Texto"
            android:textColor="#F9A825" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="175dp"
            android:layout_marginEnd="20dp"
            android:background="#EFEFEF"
            android:paddingStart="15dp"
            android:text="@string/imc_obesidad1"
            android:textAppearance="@style/Texto"
            android:textColor="#ff8000" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="120dp"
            android:layout_marginTop="175dp"
            android:text="30 - 35"
            android:textAppearance="@style/Texto"
            android:textColor="#ff8000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="20dp"
            android:background="#EFEFEF"
            android:paddingStart="15dp"
            android:text="@string/imc_obesidad2"
            android:textAppearance="@style/Texto"
            android:textColor="#FF0000" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="120dp"
            android:layout_marginTop="200dp"
            android:text="35 - 40"
            android:textAppearance="@style/Texto"
            android:textColor="#FF0000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="225dp"
            android:layout_marginEnd="20dp"
            android:background="#EFEFEF"
            android:paddingStart="15dp"
            android:text="@string/imc_obesidad3"
            android:textAppearance="@style/Texto"
            android:textColor="#FF0000" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="120dp"
            android:layout_marginTop="225dp"
            android:text="> 40"
            android:textAppearance="@style/Texto"
            android:textColor="#FF0000" />

        <TextView
            android:id="@+id/txtEstadoImc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="150dp"
            android:text="@string/estado"
            android:textAppearance="@style/Texto"
            android:textColor="#FF0000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtNecesidadImc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="80dp"
            android:text="@string/Necesita_perder"
            android:textAppearance="@style/Texto"
            android:textColor="#FF0000"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>



    
</androidx.constraintlayout.widget.ConstraintLayout>