<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".View.fragmentos.Configuracion">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abConfiguracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbConfiguracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Blue"
            app:titleTextColor="@color/textologin" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgConfiguracion"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginTop="25dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_uhealth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abConfiguracion" />

    <TextView
        android:id="@+id/txtImgLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/courgette"
        android:text="@string/app_name"
        android:textColor="@color/texto"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/imgConfiguracion"
        app:layout_constraintStart_toStartOf="@id/imgConfiguracion"
        app:layout_constraintTop_toTopOf="@id/imgConfiguracion" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnActualizarPerfil"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_button"
        android:backgroundTint="@color/Blue"
        android:text="@string/actualizar_perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgConfiguracion" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCerrarSesion"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_button"
        android:backgroundTint="@color/Blue"
        android:text="@string/cerrar_sesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnActualizarPerfil" />

    <TextView
        android:id="@+id/txtEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/courgette"
        android:text="Estado"
        android:textColor="@color/Azul_Claro"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCerrarSesion" />


</androidx.constraintlayout.widget.ConstraintLayout>